# qplayer_mycroft

./: .gitignore  CMakeLists.txt  player_backend.pro
common/: commands.h  info.h  multithread_printer.cpp  multithread_printer.h  protocol.h  serializable.h  utils.h
player_client/: client.cpp  client.h  client_socket.cpp  client_socket.h  keyboard_worker.cpp  keyboard_worker.h  main.cpp  player_client.pro
player_server/: main.cpp  play_worker.cpp  play_worker.h  player_server.pro  server.cpp  server.h  server_socket.cpp  server_socket.h  utils.h
